fix overflow issue in home page

--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -3,14 +3,7 @@
   align-items: center;
   margin: 0 1.5vh;
   overflow: hidden;
-  position: relative;
 }
-
-.welcome {
-  width: 40%;
-  padding-right: 20px;
-}
-
 .hero_bg {
   display: flex;
   flex-direction: column;
@@ -24,6 +17,11 @@
   background-size: cover;
   background-position: 50%;
   position: relative;
+
+}
+
+.slick-arrow {
+  display: none;
 }
 
 .hero_bg::after {
@@ -59,7 +57,7 @@
     white-space: normal;
     font-size: 7vw;
     line-height: 7vw;
-    position: static;
+    /* position: static; */
   }
 }
 @media only screen and (max-width: 600px) {
